enabled "physical" and "virtual" as synonyms for <textarea> "wrap" attribute value bug = ???, it's been reassigned to someone else, this was part of a larger problem that has mostly been fixed already r=rods

checked in some debug-only metrics code that's been sitting in my tree for a few weeks
r=rods

bug 24950
the frame was creating additional initial reflows for itself indirectly and unnecessarily in some cases
r=hyatt (though he hasn't had time for a thorough review of this yet, so I'm going out on a limb a bit
by checking it in prematurely.  But I'm very confident, I've done tons of testing, and I'll still insist
on a thorough code review of this change.)